Add doc-values aggregator for std deviation aggregation.
It improves the performance of the global standard deviation aggregations.
See https://github.com/crate/crate/pull/10048 for more information
about the approach.